ingresses/yolo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name:  yolo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: client-service
                port:
                  number: 3000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service   
                port:
                  number: 5000
